--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,17 @@
   <button
     mat-raised-button
     color="primary"
+    style="margin-right: 10px;"
     (click)="openUserLoginDialog()"
   >
     Login
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="openMoviesDialog()"
+  >
+    All Movies
   </button>
 </div>
 
