--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,7 +1,41 @@
-<!-- src/app/movie-card/movie-card.component.html -->
-<mat-card *ngFor="let movie of movies; let i=index;">
-    <mat-dialog-content>
-        <mat-card-title>{{movie.title}}</mat-card-title>
-        <mat-card-subtitle><img src={{movie.imagePath}}/></mat-card-subtitle>
-    </mat-dialog-content>
-</mat-card>
+<div>
+    <nav>
+        <button mat-button color="primary" (click)="redirectProfile()">User Profile</button>
+        <button mat-button color="primary" (click)="logout()">Logout</button>
+    </nav>
+    <div style="display: flex;">
+        <mat-card *ngFor="let movie of movies;" style="flex: 1 1 auto;">
+            <mat-card-header>
+            <mat-card-title>{{movie.title}}</mat-card-title>
+                <mat-card-subtitle>Directed by: {{movie.director.name}}</mat-card-subtitle>
+            </mat-card-header>
+            <img src={{movie.imagePath}} alt= {{movie.title}} />
+            <mat-card-actions>
+                <button
+                    mat-button
+                    color="primary"
+                    (click)="showGenre(movie)"
+                >
+                    Genre
+                </button>
+                <button
+                    mat-button
+                    color="primary"
+                    (click)="showDirector(movie)"
+                >
+                    Director
+                </button>
+                <button
+                    mat-button
+                    color="primary"
+                    (click)="showDetail(movie)"
+                >
+                    Synopsis
+                </button>
+                <mat-icon
+                    (click)="addFavorite(movie.title)"
+                >favorite_border</mat-icon>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
