--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -13,21 +13,21 @@
             <mat-card-actions>
                 <button
                     mat-button
-                    color="primary"
+                    color="secondary"
                     (click)="showGenre(movie)"
                 >
                     Genre
                 </button>
                 <button
                     mat-button
-                    color="primary"
+                    color="secondary"
                     (click)="showDirector(movie)"
                 >
                     Director
                 </button>
                 <button
                     mat-button
-                    color="primary"
+                    color="secondary"
                     (click)="showDetail(movie)"
                 >
                     Synopsis
