--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -78,12 +78,22 @@
     <!-- Favorite Movies -->
     <mat-card-title>Favorite Movies</mat-card-title>
     <div style="display: flex;">
-        <mat-card *ngFor="let movie of this.favouriteMovies;" style="width: 280px; margin-right: 10px;">
+        <mat-card *ngFor="let movie of this.favoriteMovies;" style="width: 280px; margin-right: 10px;">
             <mat-card-header>
                 <mat-card-title>{{movie.title}}</mat-card-title>
                 <mat-card-subtitle>Directed by: {{movie.director.name}}</mat-card-subtitle>
             </mat-card-header>
             <img src={{movie.imagePath}} alt= {{movie.title}} />
+            <mat-card-actions>
+                <button
+                mat-raised-button
+                (click)="removeFromFavorite(movie)"
+                color="primary"
+                style="margin-right: 10px;"
+                >
+                Remove from favorite
+                </button>
+            </mat-card-actions>
         </mat-card>
     </div>
 </mat-card>
