--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -33,7 +33,7 @@
                     Synopsis
                 </button>
                 <mat-icon
-                    fontIcon="favorite_border"
+                    fontIcon="{{ movie.isFavorite ? 'favorite' : 'favorite_border'}}"
                     id="{{movie._id}}-favorite-icon"
                     (click)="modifyFavoriteMovies(movie)"
                 >favorite_border</mat-icon>
